--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,5 +1,5 @@
 <h1>About</h1>
 <h1>w1</h1>
 <h2>個人進度</h2>
-<p><img alt="" height="300" src="/images/1..png" width="513"/><img alt="" height="300" src="/images/2.png" width="533"/><img alt="" height="300" src="/images/3.png" width="533"/><img alt="" height="300" src="/images/4.png" width="533"/></p>
+<p><img alt="" height="300" src="/images/1..png" width="513"/><img alt="" height="300" src="/images/2.png" width="533"/><img alt="" height="300" src="/images/3.png" width="533"/><img alt="" height="300" src="/images/4.png" width="533"/><img alt="" height="300" src="/images/5.png" width="533"/><img alt="" height="300" src="/images/6.png" width="533"/></p>
 <p></p>
