--- a/content/個人進度.html
+++ b/content/個人進度.html
@@ -135,7 +135,13 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w1 << <a href='w1.html'>Previous</a> <br /><h1>個人進度</h1>
 <p><img alt="" height="300" src="./../images/1..png" width="513"/><img alt="" height="300" src="./../images/2.png" width="533"/><img alt="" height="300" src="./../images/3.png" width="533"/><img alt="" height="300" src="./../images/4.png" width="533"/><img alt="" height="300" src="./../images/5.png" width="533"/><img alt="" height="300" src="./../images/6.png" width="533"/></p>
-<p></p><br />w1 << <a href='w1.html'>Previous</a> </div>
+<p><img alt="" height="300" src="./../images/7.png" width="533"/></p>
+<p><img alt="" height="300" src="./../images/8.png" width="533"/></p>
+<p><img alt="" height="300" src="./../images/9.png" width="533"/></p>
+<p><img alt="" height="300" src="./../images/10.png" width="533"/></p>
+<p><img alt="" height="300" src="./../images/11.png" width="533"/></p>
+<p><img alt="" height="300" src="./../images/12.png" width="533"/></p>
+<p><img alt="" height="300" src="./../images/13.png" width="533"/><img alt="" height="300" src="./../images/14.png" width="533"/><img alt="" height="300" src="./../images/15.png" width="533"/><img alt="" height="300" src="./../images/16.png" width="533"/><img alt="" height="300" src="./../images/17.png" width="533"/><img alt="" height="300" src="./../images/18.png" width="533"/><img alt="" height="300" src="./../images/19.png" width="533"/><img alt="" height="300" src="./../images/20.png" width="533"/>4<img alt="" height="300" src="./../images/21.png" width="533"/><img alt="" height="300" src="./../images/22.png" width="533"/><img caption="false" height="300" src="./../images/23.png" width="533"/><img alt="" height="300" src="./../images/24.png" width="533"/><img alt="" height="300" src="./../images/25.png" width="533"/></p><br />w1 << <a href='w1.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
