--- a/content/About.html
+++ b/content/About.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li><a href='圖檔.html'>圖檔</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='w1.html'>Next</a> >> w1<br /><h1>About</h1>
-<br /> <a href='w1.html'>Next</a> >> w1</div>
+    <div id="tipue_search_content"> <a href='進度.html'>Next</a> >> 進度<br /><h1>About</h1>
+<br /> <a href='進度.html'>Next</a> >> 進度</div>
         
     <!-- footer -->
       <div class="container">
