--- a/content/圖檔.html
+++ b/content/圖檔.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li><a href='圖檔.html'>圖檔</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,8 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='個人進度.html'>Next</a> >> 個人進度<br /><h1>w1</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='個人進度.html'>Next</a> >> 個人進度</div>
+    <div id="tipue_search_content">個人進度 << <a href='個人進度.html'>Previous</a> <br /><h1>圖檔</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="400" src="https://www.youtube.com/watch?v=gOcmxXB-yCw&amp;t=34s" width="600"></iframe><img alt="" height="400" src="./../images/03.png" width="533"/></p>
+<p><img alt="" height="300" src="./../images/3.png" width="533"/></p><br />個人進度 << <a href='個人進度.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
