--- a/content/sitemap.html
+++ b/content/sitemap.html
@@ -121,7 +121,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li><a href='圖檔.html'>圖檔</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a></li>
                       </ul>
                 </nav>
               </div>
@@ -132,4 +132,4 @@ img.add_border {
           </div>
           
         </header>
-    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a><li><a href='進度.html'>進度</a><ul><li><a href='個人進度.html'>個人進度</a><li><a href='圖檔.html'>圖檔</a></li></ul></section></div></body></html>
+    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a><li><a href='進度.html'>進度</a><ul><li><a href='個人進度.html'>個人進度</a></li></ul></section></div></body></html>
