--- a/content/圖檔.html
+++ b/content/圖檔.html
@@ -135,7 +135,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">個人進度 << <a href='個人進度.html'>Previous</a> <br /><h1>圖檔</h1>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/gOcmxXB-yCw" width="560"></iframe></p>
-<p><img alt="" height="400" src="./../images/03.png" width="533"/><img alt="" height="300" src="./../images/3.png" width="533"/></p><br />個人進度 << <a href='個人進度.html'>Previous</a> </div>
+<p><img alt="" height="400" src="./../images/03.png" width="533"/><img alt="" height="300" src="./../images/3.png" width="533"/></p>
+<p>2</p><br />個人進度 << <a href='個人進度.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
