--- a/config/content.htm
+++ b/config/content.htm
@@ -12,4 +12,5 @@
 <h2>圖檔</h2>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/gOcmxXB-yCw" width="560"></iframe></p>
 <p><img alt="" height="400" src="/images/03.png" width="533"/><img alt="" height="300" src="/images/3.png" width="533"/></p>
-<p>2</p>
+<p></p>
+<p><a href="/downloads/3.stl">onshape 03</a></p>
