--- a/content/Home.html
+++ b/content/Home.html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">進度 << <a href='進度.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>個人進度</h1>
-<p><iframe height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQS7OXi7KxNdLOO_m-Ifm4_HY4EWWOnzwA8p8lLgdo1wX3J1z2i5fR2rVZeh8si7voCAf9i9kT0F4iE/pubhtml?widget=true&amp;headers=false" width="1000"></iframe></p><br />進度 << <a href='進度.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
+    <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <br /><h1>Home</h1>
+<p></p><br />w3 << <a href='w3.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
