--- a/content/index.html
+++ b/content/index.html
@@ -102,14 +102,14 @@ img.add_border {
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container-fluid">
                 <div class="row align-items-center">
-                <h1>40823234 cad2020</h1>
+                <h1>40832244 cad2020</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">40823234 cad2020</a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">40832244 cad2020</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li><a href='圖檔.html'>圖檔</a></li>
+                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li><a href='每周進度.html'>每周進度</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a></li></ul><li><a href='Home.html'>Home</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,8 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='進度.html'>Next</a> >> 進度<br /><h1>About</h1>
-<br /> <a href='進度.html'>Next</a> >> 進度</div>
+    <div id="tipue_search_content"> <a href='組員名單.html'>Next</a> >> 組員名單<br /><h1>About</h1>
+<h5>我的倉儲:<a href="https://github.com/40832244">https://github.com/40832244</a><br/>課程網站:<a href="http://mde.tw/cad2020/content/index.html">http://mde.tw/cad2020/content/index.html</a></h5>
+<br /> <a href='組員名單.html'>Next</a> >> 組員名單</div>
         
     <!-- footer -->
       <div class="container">
