--- a/content/w1.html
+++ b/content/w1.html
@@ -102,14 +102,14 @@ img.add_border {
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container-fluid">
                 <div class="row align-items-center">
-                <h1>40823234 cad2020</h1>
+                <h1>40832244 cad2020</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">40823234 cad2020</a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">40832244 cad2020</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li><a href='圖檔.html'>圖檔</a></li>
+                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li><a href='每周進度.html'>每周進度</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a></li></ul><li><a href='Home.html'>Home</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,11 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">個人進度 << <a href='個人進度.html'>Previous</a> <br /><h1>圖檔</h1>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/gOcmxXB-yCw" width="560"></iframe></p>
-<p><img alt="" height="400" src="./../images/03.png" width="533"/><img alt="" height="300" src="./../images/3.png" width="533"/></p>
-<p></p>
-<p><a href="./../downloads/3.stl">onshape 03</a></p><br />個人進度 << <a href='個人進度.html'>Previous</a> </div>
+    <div id="tipue_search_content">個人進度 << <a href='個人進度.html'>Previous</a> <a href='w2.html'>Next</a> >> w2<br /><h1>w1</h1>
+<p><br/><img alt="" height="69" src="./../images/製圖_201016_0.jpg" width="85"/><img alt="" height="69" src="./../images/製圖_201016_1.jpg" width="78"/><img alt="" height="69" src="./../images/製圖_201016_2.jpg" width="81"/><img alt="" height="69" src="./../images/製圖_201016_3.jpg" width="82"/><img alt="" height="69" src="./../images/製圖_201016_4.jpg" width="86"/><img alt="" height="69" src="./../images/製圖_201016_5.jpg" width="87"/><img alt="" height="69" src="./../images/製圖_201016_6.jpg" width="69"/><img alt="" height="68" src="./../images/製圖_201016_7.jpg" width="74"/><img alt="" height="68" src="./../images/製圖_201016_8.jpg" width="82"/><img alt="" height="68" src="./../images/製圖_201016_9.jpg" width="88"/><br/><img alt="" height="97" src="./../images/製圖_201016_10.jpg" width="54"/><img alt="" height="98" src="./../images/製圖_201016_36.jpg" width="204"/><img alt="" height="97" src="./../images/製圖_201016_50.jpg" width="230"/></p>
+<br />個人進度 << <a href='個人進度.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
         
     <!-- footer -->
       <div class="container">
