--- a/content/每周進度.html
+++ b/content/每周進度.html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">進度 << <a href='進度.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>個人進度</h1>
-<p><iframe height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQS7OXi7KxNdLOO_m-Ifm4_HY4EWWOnzwA8p8lLgdo1wX3J1z2i5fR2rVZeh8si7voCAf9i9kT0F4iE/pubhtml?widget=true&amp;headers=false" width="1000"></iframe></p><br />進度 << <a href='進度.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
+    <div id="tipue_search_content">組員名單 << <a href='組員名單.html'>Previous</a> <a href='進度.html'>Next</a> >> 進度<br /><h1>每周進度</h1>
+<br />組員名單 << <a href='組員名單.html'>Previous</a> <a href='進度.html'>Next</a> >> 進度</div>
         
     <!-- footer -->
       <div class="container">
