--- a/content/放上每周作業並更新、自評互評、小組作業.html
+++ b/content/放上每周作業並更新、自評互評、小組作業.html
@@ -133,9 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='每周進度.html'>Next</a> >> 每周進度<br /><h1>組員名單</h1>
-<p><br/><a href="https://s40723224.github.io/cad2020">40723224</a><span> 范誠宇</span><br/><a href="https://40823204.github.io/cad2020">40823204</a><span> 賴惟嘉</span><br/><a href="https://40823212.github.io/cad2020">40823212</a><span> 陳逸翔</span><br/><a href="https://40823215.github.io/cad2020">40823215</a><span> 謝閎璾</span><br/><a href="https://40823219.github.io/cad2020">40823219</a><span> 廖顯紘</span><br/><a href="https://40823225.github.io/cad2020">40823225</a><span> 徐誠隆 </span><br/><a href="https://40823226.github.io/cad2020">40823226</a><span> 蘇柏瑋 </span><br/><a href="https://40823234.github.io/cad2020">40823234</a><span> 游子毅</span><br/><a href="https://40823250.github.io/cad2020">40823250</a><span> 張哲瑀</span><br/><a href="https://40823251.github.io/cad2020">40823251</a><span> 林進益</span><br/><a href="https://40832244.github.io/cad2020">40832244</a> 林晉廷</p>
-<br />About << <a href='About.html'>Previous</a> <a href='每周進度.html'>Next</a> >> 每周進度</div>
+    <div id="tipue_search_content">每周進度 << <a href='每周進度.html'>Previous</a> <a href='進度.html'>Next</a> >> 進度<br /><h1>放上每周作業並更新、自評互評、小組作業</h1>
+<br />每周進度 << <a href='每周進度.html'>Previous</a> <a href='進度.html'>Next</a> >> 進度</div>
         
     <!-- footer -->
       <div class="container">
