--- a/content/每周進度.html
+++ b/content/每周進度.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li><a href='每周進度.html'>每周進度</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a></li></ul><li><a href='Home.html'>Home</a></li>
+                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='放上每周作業並更新、自評互評、小組作業.html'>放上每周作業並更新、自評互評、小組作業</a></li></ul><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a></li></ul><li><a href='Home.html'>Home</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">組員名單 << <a href='組員名單.html'>Previous</a> <a href='進度.html'>Next</a> >> 進度<br /><h1>每周進度</h1>
-<br />組員名單 << <a href='組員名單.html'>Previous</a> <a href='進度.html'>Next</a> >> 進度</div>
+    <div id="tipue_search_content">組員名單 << <a href='組員名單.html'>Previous</a> <a href='放上每周作業並更新、自評互評、小組作業.html'>Next</a> >> 放上每周作業並更新、自評互評、小組作業<br /><h1>每周進度</h1>
+<br />組員名單 << <a href='組員名單.html'>Previous</a> <a href='放上每周作業並更新、自評互評、小組作業.html'>Next</a> >> 放上每周作業並更新、自評互評、小組作業</div>
         
     <!-- footer -->
       <div class="container">
