--- a/content/個人進度.html
+++ b/content/個人進度.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a></li></ul><li><a href='Home.html'>Home</a></li>
+                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li class='has-children'><a href='w1-w3.html'>w1-w3</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a></li></ul><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a></li></ul><li><a href='Home.html'>Home</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,9 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">每周進度 << <a href='每周進度.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>個人進度</h1>
+    <div id="tipue_search_content">每周進度 << <a href='每周進度.html'>Previous</a> <a href='w1-w3.html'>Next</a> >> w1-w3<br /><h1>個人進度</h1>
 <p><iframe height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQS7OXi7KxNdLOO_m-Ifm4_HY4EWWOnzwA8p8lLgdo1wX3J1z2i5fR2rVZeh8si7voCAf9i9kT0F4iE/pubhtml?widget=true&amp;headers=false" width="1000"></iframe></p>
-<br />每周進度 << <a href='每周進度.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
+<br />每周進度 << <a href='每周進度.html'>Previous</a> <a href='w1-w3.html'>Next</a> >> w1-w3</div>
         
     <!-- footer -->
       <div class="container">
