--- a/content/HW1.html
+++ b/content/HW1.html
@@ -133,9 +133,25 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW1 << <a href='HW1.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>w2</h1>
-<p><br/><img alt="" height="66" src="./../images/soildwork 練習一_201016_0.jpg" width="156"/><img alt="" height="65" src="./../images/soildwork 練習一_201016_1.jpg" width="163"/><img alt="" height="64" src="./../images/soildwork 練習一_201016_10.jpg" width="160"/><img alt="" height="66" src="./../images/soildwork 練習一_201016_11.jpg" width="156"/><img alt="" height="66" src="./../images/soildwork 練習一_201016_12.jpg" width="156"/><img alt="" height="66" src="./../images/soildwork 練習一_201016_13.jpg" width="157"/><img alt="" height="66" src="./../images/soildwork 練習一_201016_14.jpg" width="157"/><img alt="" height="66" src="./../images/soildwork 練習一_201016_15.jpg" width="157"/><img alt="" height="66" src="./../images/soildwork 練習一_201016_16.jpg" width="157"/><img alt="" height="66" src="./../images/soildwork 練習一_201016_17.jpg" width="156"/><img alt="" height="66" src="./../images/soildwork 練習一_201016_18.jpg" width="156"/><img alt="" height="65" src="./../images/soildwork 練習一_201016_19.jpg" width="163"/><img alt="" height="66" src="./../images/soildwork 練習一_201016_2.jpg" width="156"/><img alt="" height="65" src="./../images/soildwork 練習一_201016_20.jpg" width="154"/><img alt="" height="64" src="./../images/soildwork 練習一_201016_21.jpg" width="160"/><img alt="" height="65" src="./../images/soildwork 練習一_201016_3.jpg" width="154"/><img alt="" height="65" src="./../images/soildwork 練習一_201016_4.jpg" width="154"/><img alt="" height="64" src="./../images/soildwork 練習一_201016_5.jpg" width="152"/><img alt="" height="65" src="./../images/soildwork 練習一_201016_6.jpg" width="154"/><img alt="" height="64" src="./../images/soildwork 練習一_201016_7.jpg" width="152"/><img alt="" height="65" src="./../images/soildwork 練習一_201016_8.jpg" width="154"/><img alt="" height="65" src="./../images/soildwork 練習一_201016_9.jpg" width="154"/><img alt="" height="65" src="./../images/soildworks 2_201016_50.jpg" width="116"/></p>
-<br />HW1 << <a href='HW1.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
+    <div id="tipue_search_content">w1-w3 << <a href='w1-w3.html'>Previous</a> <a href='w2.html'>Next</a> >> w2<br /><h1>HW1</h1>
+<p>練習1:http://mde.tw/cad2020/downloads/Solidworks%20%E9%9B%B6%E4%BB%B6%E7%B9%AA%E5%9C%96%E7%B7%B4%E7%BF%921.pdf</p>
+<p>練習2:http://mde.tw/cad2020/downloads/Solidworks%20%E9%9B%B6%E4%BB%B6%E7%B9%AA%E5%9C%96%E7%B7%B4%E7%BF%922.pdf</p>
+<p>第一張<br/><img alt="" height="151" src="./../images/製圖_201016_0.jpg" width="186"/></p>
+<p>第二張</p>
+<p><img alt="" height="165" src="./../images/製圖_201016_1.jpg" width="187"/></p>
+<p>第三張</p>
+<p><img alt="" height="160" src="./../images/製圖_201016_2.jpg" width="188"/></p>
+<p>第五張</p>
+<p><img alt="" height="159" src="./../images/製圖_201016_3.jpg" width="189"/></p>
+<p>第六張</p>
+<p><img alt="" height="151" src="./../images/製圖_201016_4.jpg" width="188"/></p>
+<p>第七張</p>
+<p><img alt="" height="146" src="./../images/製圖_201016_5.jpg" width="184"/></p>
+<p>第九張</p>
+<p><img alt="" height="185" src="./../images/製圖_201016_6.jpg" width="185"/></p>
+<p>第十張</p>
+<p><img alt="" height="170" src="./../images/製圖_201016_7.jpg" width="185"/></p>
+<br />w1-w3 << <a href='w1-w3.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
         
     <!-- footer -->
       <div class="container">
