--- a/content/w1-w3.html
+++ b/content/w1-w3.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a></li></ul><li><a href='Home.html'>Home</a></li>
+                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li class='has-children'><a href='w1-w3.html'>w1-w3</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a></li></ul><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a></li></ul><li><a href='Home.html'>Home</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,22 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">個人進度 << <a href='個人進度.html'>Previous</a> <a href='w2.html'>Next</a> >> w2<br /><h1>w1</h1>
-<p>第一張<br/><img alt="" height="151" src="./../images/製圖_201016_0.jpg" width="186"/></p>
-<p>第二張</p>
-<p><img alt="" height="165" src="./../images/製圖_201016_1.jpg" width="187"/></p>
-<p>第三張</p>
-<p><img alt="" height="160" src="./../images/製圖_201016_2.jpg" width="188"/></p>
-<p>第五張</p>
-<p><img alt="" height="159" src="./../images/製圖_201016_3.jpg" width="189"/></p>
-<p>第六張</p>
-<p><img alt="" height="151" src="./../images/製圖_201016_4.jpg" width="188"/></p>
-<p>第七張</p>
-<p><img alt="" height="146" src="./../images/製圖_201016_5.jpg" width="184"/></p>
-<p>第九張</p>
-<p><img alt="" height="185" src="./../images/製圖_201016_6.jpg" width="185"/></p>
-<p>第十張</p>
-<p><img alt="" height="170" src="./../images/製圖_201016_7.jpg" width="185"/></p><br />個人進度 << <a href='個人進度.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
+    <div id="tipue_search_content">個人進度 << <a href='個人進度.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>w1-w3</h1>
+<br />個人進度 << <a href='個人進度.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
         
     <!-- footer -->
       <div class="container">
