--- a/content/w1-w3.html
+++ b/content/w1-w3.html
@@ -134,7 +134,22 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">個人進度 << <a href='個人進度.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>w1-w3</h1>
-<br />個人進度 << <a href='個人進度.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
+<p></p>
+<p>第一張<br/><img alt="" height="151" src="./../images/製圖_201016_0.jpg" width="186"/></p>
+<p>第二張</p>
+<p><img alt="" height="165" src="./../images/製圖_201016_1.jpg" width="187"/></p>
+<p>第三張</p>
+<p><img alt="" height="160" src="./../images/製圖_201016_2.jpg" width="188"/></p>
+<p>第五張</p>
+<p><img alt="" height="159" src="./../images/製圖_201016_3.jpg" width="189"/></p>
+<p>第六張</p>
+<p><img alt="" height="151" src="./../images/製圖_201016_4.jpg" width="188"/></p>
+<p>第七張</p>
+<p><img alt="" height="146" src="./../images/製圖_201016_5.jpg" width="184"/></p>
+<p>第九張</p>
+<p><img alt="" height="185" src="./../images/製圖_201016_6.jpg" width="185"/></p>
+<p>第十張</p>
+<p><img alt="" height="170" src="./../images/製圖_201016_7.jpg" width="185"/></p><br />個人進度 << <a href='個人進度.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
         
     <!-- footer -->
       <div class="container">
