--- a/content/HW1.html
+++ b/content/HW1.html
@@ -134,24 +134,11 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w1-w3 << <a href='w1-w3.html'>Previous</a> <a href='w2.html'>Next</a> >> w2<br /><h1>HW1</h1>
-<p>練習1:http://mde.tw/cad2020/downloads/Solidworks%20%E9%9B%B6%E4%BB%B6%E7%B9%AA%E5%9C%96%E7%B7%B4%E7%BF%921.pdf</p>
-<p>練習2:http://mde.tw/cad2020/downloads/Solidworks%20%E9%9B%B6%E4%BB%B6%E7%B9%AA%E5%9C%96%E7%B7%B4%E7%BF%922.pdf</p>
-<p>第一張<br/><img alt="" height="151" src="./../images/製圖_201016_0.jpg" width="186"/></p>
-<p>第二張</p>
-<p><img alt="" height="165" src="./../images/製圖_201016_1.jpg" width="187"/></p>
-<p>第三張</p>
-<p><img alt="" height="160" src="./../images/製圖_201016_2.jpg" width="188"/></p>
-<p>第五張</p>
-<p><img alt="" height="159" src="./../images/製圖_201016_3.jpg" width="189"/></p>
-<p>第六張</p>
-<p><img alt="" height="151" src="./../images/製圖_201016_4.jpg" width="188"/></p>
-<p>第七張</p>
-<p><img alt="" height="146" src="./../images/製圖_201016_5.jpg" width="184"/></p>
-<p>第九張</p>
-<p><img alt="" height="185" src="./../images/製圖_201016_6.jpg" width="185"/></p>
-<p>第十張</p>
-<p><img alt="" height="170" src="./../images/製圖_201016_7.jpg" width="185"/></p>
-<br />w1-w3 << <a href='w1-w3.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
+<p>練習1:</p>
+<p>http://mde.tw/cad2020/downloads/Solidworks%20%E9%9B%B6%E4%BB%B6%E7%B9%AA%E5%9C%96%E7%B7%B4%E7%BF%921.pdf</p>
+<p>練習2:</p>
+<p>http://mde.tw/cad2020/downloads/Solidworks%20%E9%9B%B6%E4%BB%B6%E7%B9%AA%E5%9C%96%E7%B7%B4%E7%BF%922.pdf</p>
+<p></p><br />w1-w3 << <a href='w1-w3.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
         
     <!-- footer -->
       <div class="container">
