--- a/content/HW1.html
+++ b/content/HW1.html
@@ -138,7 +138,8 @@ img.add_border {
 <p>http://mde.tw/cad2020/downloads/Solidworks%20%E9%9B%B6%E4%BB%B6%E7%B9%AA%E5%9C%96%E7%B7%B4%E7%BF%921.pdf</p>
 <p>練習2:</p>
 <p>http://mde.tw/cad2020/downloads/Solidworks%20%E9%9B%B6%E4%BB%B6%E7%B9%AA%E5%9C%96%E7%B7%B4%E7%BF%922.pdf</p>
-<p></p><br />w1-w3 << <a href='w1-w3.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
+<p>零件圖</p>
+<p>&lt;p&gt;&lt;iframe width="1000" height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQS7OXi7KxNdLOO_m-Ifm4_HY4EWWOnzwA8p8lLgdo1wX3J1z2i5fR2rVZeh8si7voCAf9i9kT0F4iE/pubhtml?widget=true&amp;amp;headers=false"&gt;&lt;/iframe&gt;&lt;/p&gt;</p><br />w1-w3 << <a href='w1-w3.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
         
     <!-- footer -->
       <div class="container">
