--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -3,9 +3,7 @@
 <h1>組員名單</h1>
 <p><br/><a href="https://s40723224.github.io/cad2020">40723224</a><span> 范誠宇</span><br/><a href="https://40823204.github.io/cad2020">40823204</a><span> 賴惟嘉</span><br/><a href="https://40823212.github.io/cad2020">40823212</a><span> 陳逸翔</span><br/><a href="https://40823215.github.io/cad2020">40823215</a><span> 謝閎璾</span><br/><a href="https://40823219.github.io/cad2020">40823219</a><span> 廖顯紘</span><br/><a href="https://40823225.github.io/cad2020">40823225</a><span> 徐誠隆 </span><br/><a href="https://40823226.github.io/cad2020">40823226</a><span> 蘇柏瑋 </span><br/><a href="https://40823234.github.io/cad2020">40823234</a><span> 游子毅</span><br/><a href="https://40823250.github.io/cad2020">40823250</a><span> 張哲瑀</span><br/><a href="https://40823251.github.io/cad2020">40823251</a><span> 林進益</span><br/><a href="https://40832244.github.io/cad2020">40832244</a> 林晉廷</p>
 <h1>每周進度</h1>
-<h2>個人進度</h2>
-<p><iframe height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQS7OXi7KxNdLOO_m-Ifm4_HY4EWWOnzwA8p8lLgdo1wX3J1z2i5fR2rVZeh8si7voCAf9i9kT0F4iE/pubhtml?widget=true&amp;headers=false" width="1000"></iframe></p>
-<h2>w1-w3</h2>
+<h2>個人進度</h2><h2>w1-w3</h2>
 <p></p>
 <p>第一張<br/><img alt="" height="151" src="/images/製圖_201016_0.jpg" width="186"/></p>
 <p>第二張</p>
@@ -22,24 +20,11 @@
 <p><img alt="" height="185" src="/images/製圖_201016_6.jpg" width="185"/></p>
 <p>第十張</p>
 <p><img alt="" height="170" src="/images/製圖_201016_7.jpg" width="185"/></p><h3>HW1</h3>
-<p>練習1:http://mde.tw/cad2020/downloads/Solidworks%20%E9%9B%B6%E4%BB%B6%E7%B9%AA%E5%9C%96%E7%B7%B4%E7%BF%921.pdf</p>
-<p>練習2:http://mde.tw/cad2020/downloads/Solidworks%20%E9%9B%B6%E4%BB%B6%E7%B9%AA%E5%9C%96%E7%B7%B4%E7%BF%922.pdf</p>
-<p>第一張<br/><img alt="" height="151" src="/images/製圖_201016_0.jpg" width="186"/></p>
-<p>第二張</p>
-<p><img alt="" height="165" src="/images/製圖_201016_1.jpg" width="187"/></p>
-<p>第三張</p>
-<p><img alt="" height="160" src="/images/製圖_201016_2.jpg" width="188"/></p>
-<p>第五張</p>
-<p><img alt="" height="159" src="/images/製圖_201016_3.jpg" width="189"/></p>
-<p>第六張</p>
-<p><img alt="" height="151" src="/images/製圖_201016_4.jpg" width="188"/></p>
-<p>第七張</p>
-<p><img alt="" height="146" src="/images/製圖_201016_5.jpg" width="184"/></p>
-<p>第九張</p>
-<p><img alt="" height="185" src="/images/製圖_201016_6.jpg" width="185"/></p>
-<p>第十張</p>
-<p><img alt="" height="170" src="/images/製圖_201016_7.jpg" width="185"/></p>
-<h2>w2</h2>
+<p>練習1:</p>
+<p>http://mde.tw/cad2020/downloads/Solidworks%20%E9%9B%B6%E4%BB%B6%E7%B9%AA%E5%9C%96%E7%B7%B4%E7%BF%921.pdf</p>
+<p>練習2:</p>
+<p>http://mde.tw/cad2020/downloads/Solidworks%20%E9%9B%B6%E4%BB%B6%E7%B9%AA%E5%9C%96%E7%B7%B4%E7%BF%922.pdf</p>
+<p></p><h2>w2</h2>
 <p><br/><img alt="" height="66" src="/images/soildwork 練習一_201016_0.jpg" width="156"/><img alt="" height="65" src="/images/soildwork 練習一_201016_1.jpg" width="163"/><img alt="" height="64" src="/images/soildwork 練習一_201016_10.jpg" width="160"/><img alt="" height="66" src="/images/soildwork 練習一_201016_11.jpg" width="156"/><img alt="" height="66" src="/images/soildwork 練習一_201016_12.jpg" width="156"/><img alt="" height="66" src="/images/soildwork 練習一_201016_13.jpg" width="157"/><img alt="" height="66" src="/images/soildwork 練習一_201016_14.jpg" width="157"/><img alt="" height="66" src="/images/soildwork 練習一_201016_15.jpg" width="157"/><img alt="" height="66" src="/images/soildwork 練習一_201016_16.jpg" width="157"/><img alt="" height="66" src="/images/soildwork 練習一_201016_17.jpg" width="156"/><img alt="" height="66" src="/images/soildwork 練習一_201016_18.jpg" width="156"/><img alt="" height="65" src="/images/soildwork 練習一_201016_19.jpg" width="163"/><img alt="" height="66" src="/images/soildwork 練習一_201016_2.jpg" width="156"/><img alt="" height="65" src="/images/soildwork 練習一_201016_20.jpg" width="154"/><img alt="" height="64" src="/images/soildwork 練習一_201016_21.jpg" width="160"/><img alt="" height="65" src="/images/soildwork 練習一_201016_3.jpg" width="154"/><img alt="" height="65" src="/images/soildwork 練習一_201016_4.jpg" width="154"/><img alt="" height="64" src="/images/soildwork 練習一_201016_5.jpg" width="152"/><img alt="" height="65" src="/images/soildwork 練習一_201016_6.jpg" width="154"/><img alt="" height="64" src="/images/soildwork 練習一_201016_7.jpg" width="152"/><img alt="" height="65" src="/images/soildwork 練習一_201016_8.jpg" width="154"/><img alt="" height="65" src="/images/soildwork 練習一_201016_9.jpg" width="154"/><img alt="" height="65" src="/images/soildworks 2_201016_50.jpg" width="116"/></p>
 <h2>w3</h2>
 <p>第一張</p>
