--- a/content/個人進度.html
+++ b/content/個人進度.html
@@ -133,9 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">每周進度 << <a href='每周進度.html'>Previous</a> <a href='w1-w3.html'>Next</a> >> w1-w3<br /><h1>個人進度</h1>
-<p><iframe height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQS7OXi7KxNdLOO_m-Ifm4_HY4EWWOnzwA8p8lLgdo1wX3J1z2i5fR2rVZeh8si7voCAf9i9kT0F4iE/pubhtml?widget=true&amp;headers=false" width="1000"></iframe></p>
-<br />每周進度 << <a href='每周進度.html'>Previous</a> <a href='w1-w3.html'>Next</a> >> w1-w3</div>
+    <div id="tipue_search_content">每周進度 << <a href='每周進度.html'>Previous</a> <a href='w1-w3.html'>Next</a> >> w1-w3<br /><h1>個人進度</h1><br />每周進度 << <a href='每周進度.html'>Previous</a> <a href='w1-w3.html'>Next</a> >> w1-w3</div>
         
     <!-- footer -->
       <div class="container">
