--- a/content/w3.html
+++ b/content/w3.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li class='has-children'><a href='w1-w3.html'>w1-w3</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a></li></ul><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a></li></ul><li><a href='Home.html'>Home</a></li>
+                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li><a href='w1-w3.html'>w1-w3</a><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a></li></ul><li><a href='w4-w6.html'>w4-w6</a></li></ul><li><a href='Home.html'>Home</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w2 << <a href='w2.html'>Previous</a> <a href='Home.html'>Next</a> >> Home<br /><h1>w3</h1>
+    <div id="tipue_search_content">w1-w3 << <a href='w1-w3.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>w3</h1>
 <p>第一張</p>
 <p><img alt="" height="172" src="./../images/製圖_201016_8.jpg" width="207"/></p>
 <p>第二張</p>
@@ -162,14 +162,7 @@ img.add_border {
 <p><img alt="" height="164" src="./../images/製圖_201016_50.jpg" width="389"/></p>
 <p>組合圖</p>
 <p><img alt="" height="478" src="./../images/製圖_201016_10.jpg" width="266"/></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<br />w2 << <a href='w2.html'>Previous</a> <a href='Home.html'>Next</a> >> Home</div>
+<br />w1-w3 << <a href='w1-w3.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
         
     <!-- footer -->
       <div class="container">
