--- a/content/HW1.html
+++ b/content/HW1.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li class='has-children'><a href='w1-w3.html'>w1-w3</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a></li></ul><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a></li></ul><li><a href='Home.html'>Home</a></li>
+                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li><a href='w1-w3.html'>w1-w3</a><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a></li></ul><li><a href='w4-w6.html'>w4-w6</a></li></ul><li><a href='Home.html'>Home</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,11 +133,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w1-w3 << <a href='w1-w3.html'>Previous</a> <a href='w2.html'>Next</a> >> w2<br /><h1>HW1</h1>
+    <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='w4-w6.html'>Next</a> >> w4-w6<br /><h1>HW1</h1>
 <p>練習1:<a href="http://mde.tw/cad2020/downloads/Solidworks%20%E9%9B%B6%E4%BB%B6%E7%B9%AA%E5%9C%96%E7%B7%B4%E7%BF%921.pdf">PDF.1</a></p>
 <p>練習2:<a href="http://mde.tw/cad2020/downloads/Solidworks%20%E9%9B%B6%E4%BB%B6%E7%B9%AA%E5%9C%96%E7%B7%B4%E7%BF%922.pdf">PDF.2</a></p>
 <p>零件圖</p>
-<p><iframe height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQS7OXi7KxNdLOO_m-Ifm4_HY4EWWOnzwA8p8lLgdo1wX3J1z2i5fR2rVZeh8si7voCAf9i9kT0F4iE/pubhtml?widget=true&amp;headers=false" width="1000"></iframe></p><br />w1-w3 << <a href='w1-w3.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
+<p><iframe height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQS7OXi7KxNdLOO_m-Ifm4_HY4EWWOnzwA8p8lLgdo1wX3J1z2i5fR2rVZeh8si7voCAf9i9kT0F4iE/pubhtml?widget=true&amp;headers=false" width="1000"></iframe></p>
+<br />w3 << <a href='w3.html'>Previous</a> <a href='w4-w6.html'>Next</a> >> w4-w6</div>
         
     <!-- footer -->
       <div class="container">
