--- a/content/w4-w6.html
+++ b/content/w4-w6.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li class='has-children'><a href='w1-w3.html'>w1-w3</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a></li></ul><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a></li></ul><li><a href='Home.html'>Home</a></li>
+                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li><a href='w1-w3.html'>w1-w3</a><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a></li></ul><li><a href='w4-w6.html'>w4-w6</a></li></ul><li><a href='Home.html'>Home</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,9 +133,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW1 << <a href='HW1.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>w2</h1>
-<p><br/><img alt="" height="66" src="./../images/soildwork 練習一_201016_0.jpg" width="156"/><img alt="" height="65" src="./../images/soildwork 練習一_201016_1.jpg" width="163"/><img alt="" height="64" src="./../images/soildwork 練習一_201016_10.jpg" width="160"/><img alt="" height="66" src="./../images/soildwork 練習一_201016_11.jpg" width="156"/><img alt="" height="66" src="./../images/soildwork 練習一_201016_12.jpg" width="156"/><img alt="" height="66" src="./../images/soildwork 練習一_201016_13.jpg" width="157"/><img alt="" height="66" src="./../images/soildwork 練習一_201016_14.jpg" width="157"/><img alt="" height="66" src="./../images/soildwork 練習一_201016_15.jpg" width="157"/><img alt="" height="66" src="./../images/soildwork 練習一_201016_16.jpg" width="157"/><img alt="" height="66" src="./../images/soildwork 練習一_201016_17.jpg" width="156"/><img alt="" height="66" src="./../images/soildwork 練習一_201016_18.jpg" width="156"/><img alt="" height="65" src="./../images/soildwork 練習一_201016_19.jpg" width="163"/><img alt="" height="66" src="./../images/soildwork 練習一_201016_2.jpg" width="156"/><img alt="" height="65" src="./../images/soildwork 練習一_201016_20.jpg" width="154"/><img alt="" height="64" src="./../images/soildwork 練習一_201016_21.jpg" width="160"/><img alt="" height="65" src="./../images/soildwork 練習一_201016_3.jpg" width="154"/><img alt="" height="65" src="./../images/soildwork 練習一_201016_4.jpg" width="154"/><img alt="" height="64" src="./../images/soildwork 練習一_201016_5.jpg" width="152"/><img alt="" height="65" src="./../images/soildwork 練習一_201016_6.jpg" width="154"/><img alt="" height="64" src="./../images/soildwork 練習一_201016_7.jpg" width="152"/><img alt="" height="65" src="./../images/soildwork 練習一_201016_8.jpg" width="154"/><img alt="" height="65" src="./../images/soildwork 練習一_201016_9.jpg" width="154"/><img alt="" height="65" src="./../images/soildworks 2_201016_50.jpg" width="116"/></p>
-<br />HW1 << <a href='HW1.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
+    <div id="tipue_search_content">HW1 << <a href='HW1.html'>Previous</a> <a href='Home.html'>Next</a> >> Home<br /><h1>w4-w6</h1>
+<h4><span>Solidworks2017使用10mm繪製</span></h4>
+<p></p>
+<p><a href="https://youtu.be/CgxD3W8lTf4">製圖影片</a></p>
+<p><img alt="" height="347" src="./../images/擷取3.PNG" width="397"/></p>
+<p></p>
+<p><img alt="" height="303" src="./../images/擷取2.PNG" width="401"/></p>
+<p></p>
+<br />HW1 << <a href='HW1.html'>Previous</a> <a href='Home.html'>Next</a> >> Home</div>
         
     <!-- footer -->
       <div class="container">
