--- a/config/content.htm
+++ b/config/content.htm
@@ -21,7 +21,6 @@
 <p><img alt="" height="185" src="/images/製圖_201016_6.jpg" width="185"/></p>
 <p>第十張</p>
 <p><img alt="" height="170" src="/images/製圖_201016_7.jpg" width="185"/></p>
-<p><br/><img alt="" height="66" src="/images/soildwork 練習一_201016_0.jpg" width="156"/><img alt="" height="65" src="/images/soildwork 練習一_201016_1.jpg" width="163"/><img alt="" height="64" src="/images/soildwork 練習一_201016_10.jpg" width="160"/><img alt="" height="66" src="/images/soildwork 練習一_201016_11.jpg" width="156"/><img alt="" height="66" src="/images/soildwork 練習一_201016_12.jpg" width="156"/><img alt="" height="66" src="/images/soildwork 練習一_201016_13.jpg" width="157"/><img alt="" height="66" src="/images/soildwork 練習一_201016_14.jpg" width="157"/><img alt="" height="66" src="/images/soildwork 練習一_201016_15.jpg" width="157"/><img alt="" height="66" src="/images/soildwork 練習一_201016_16.jpg" width="157"/><img alt="" height="66" src="/images/soildwork 練習一_201016_17.jpg" width="156"/><img alt="" height="66" src="/images/soildwork 練習一_201016_18.jpg" width="156"/><img alt="" height="65" src="/images/soildwork 練習一_201016_19.jpg" width="163"/><img alt="" height="66" src="/images/soildwork 練習一_201016_2.jpg" width="156"/><img alt="" height="65" src="/images/soildwork 練習一_201016_20.jpg" width="154"/><img alt="" height="64" src="/images/soildwork 練習一_201016_21.jpg" width="160"/><img alt="" height="65" src="/images/soildwork 練習一_201016_3.jpg" width="154"/><img alt="" height="65" src="/images/soildwork 練習一_201016_4.jpg" width="154"/><img alt="" height="64" src="/images/soildwork 練習一_201016_5.jpg" width="152"/><img alt="" height="65" src="/images/soildwork 練習一_201016_6.jpg" width="154"/><img alt="" height="64" src="/images/soildwork 練習一_201016_7.jpg" width="152"/><img alt="" height="65" src="/images/soildwork 練習一_201016_8.jpg" width="154"/><img alt="" height="65" src="/images/soildwork 練習一_201016_9.jpg" width="154"/><img alt="" height="65" src="/images/soildworks 2_201016_50.jpg" width="116"/></p>
 <h2>w3</h2>
 <p>第一張</p>
 <p><img alt="" height="172" src="/images/製圖_201016_8.jpg" width="207"/></p>
@@ -59,10 +58,58 @@
 <h2>w4-w6</h2>
 <h4><span>Solidworks2017使用10mm繪製</span></h4>
 <p></p>
-<p><a href="https://youtu.be/CgxD3W8lTf4">製圖影片</a></p>
+<p>製圖影片</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CgxD3W8lTf4" width="560"></iframe></p>
 <p><img alt="" height="347" src="/images/擷取3.PNG" width="397"/></p>
 <p></p>
 <p><img alt="" height="303" src="/images/擷取2.PNG" width="401"/></p>
 <p></p>
+<h2>w7</h2>
+<p>第一張</p>
+<p><img alt="" height="187" src="/images/soildwork 練習一_201016_0.jpg" width="442"/></p>
+<p>第二張</p>
+<p><img alt="" height="175" src="/images/soildwork 練習一_201016_1.jpg" width="439"/></p>
+<p>第三張</p>
+<p><img alt="" height="175" src="/images/soildwork 練習一_201016_10.jpg" width="438"/></p>
+<p>第四張</p>
+<p><img alt="" height="184" src="/images/soildwork 練習一_201016_11.jpg" width="435"/></p>
+<p>第五張</p>
+<p><img alt="" height="184" src="/images/soildwork 練習一_201016_12.jpg" width="435"/></p>
+<p>第六張</p>
+<p><img alt="" height="182" src="/images/soildwork 練習一_201016_13.jpg" width="433"/></p>
+<p>第七張</p>
+<p><img alt="" height="182" src="/images/soildwork 練習一_201016_14.jpg" width="433"/></p>
+<p>第八張</p>
+<p><img alt="" height="182" src="/images/soildwork 練習一_201016_15.jpg" width="434"/></p>
+<p>第九張</p>
+<p><img alt="" height="182" src="/images/soildwork 練習一_201016_16.jpg" width="433"/></p>
+<p>第十張</p>
+<p><img alt="" height="183" src="/images/soildwork 練習一_201016_17.jpg" width="433"/></p>
+<p>第十一張</p>
+<p><img alt="" height="183" src="/images/soildwork 練習一_201016_18.jpg" width="433"/></p>
+<p>第十二張</p>
+<p><img alt="" height="173" src="/images/soildwork 練習一_201016_19.jpg" width="434"/></p>
+<p>第十三張</p>
+<p><img alt="" height="183" src="/images/soildwork 練習一_201016_2.jpg" width="433"/></p>
+<p>第十四張</p>
+<p><img alt="" height="183" src="/images/soildwork 練習一_201016_20.jpg" width="434"/></p>
+<p>第十五張</p>
+<p><img alt="" height="174" src="/images/soildwork 練習一_201016_21.jpg" width="435"/></p>
+<p>第十六張</p>
+<p><img alt="" height="185" src="/images/soildwork 練習一_201016_3.jpg" width="438"/></p>
+<p>第十七張</p>
+<p><img alt="" height="184" src="/images/soildwork 練習一_201016_4.jpg" width="436"/></p>
+<p>第十八張</p>
+<p><img alt="" height="182" src="/images/soildwork 練習一_201016_5.jpg" width="435"/></p>
+<p>第十九張</p>
+<p><img alt="" height="184" src="/images/soildwork 練習一_201016_6.jpg" width="436"/></p>
+<p>第二十張</p>
+<p><img alt="" height="183" src="/images/soildwork 練習一_201016_7.jpg" width="437"/></p>
+<p>第二十一張</p>
+<p><img alt="" height="182" src="/images/soildwork 練習一_201016_8.jpg" width="431"/></p>
+<p>第二十二張</p>
+<p><img alt="" height="181" src="/images/soildwork 練習一_201016_9.jpg" width="429"/></p>
+<p>第二十三張</p>
+<p><img alt="" height="239" src="/images/soildworks 2_201016_50.jpg" width="427"/></p>
 <h1>Home</h1>
 <p></p>
