--- a/content/Home.html
+++ b/content/Home.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li><a href='w1-w3.html'>w1-w3</a><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a></li></ul><li><a href='w4-w6.html'>w4-w6</a></li></ul><li><a href='Home.html'>Home</a></li>
+                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li><a href='w1-w3.html'>w1-w3</a><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a></li></ul><li><a href='w4-w6.html'>w4-w6</a><li><a href='w7.html'>w7</a></li></ul><li><a href='Home.html'>Home</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w4-w6 << <a href='w4-w6.html'>Previous</a> <br /><h1>Home</h1>
-<p></p><br />w4-w6 << <a href='w4-w6.html'>Previous</a> </div>
+    <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <br /><h1>Home</h1>
+<p></p><br />w7 << <a href='w7.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
