--- a/content/w7.html
+++ b/content/w7.html
@@ -133,16 +133,54 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW1 << <a href='HW1.html'>Previous</a> <a href='w7.html'>Next</a> >> w7<br /><h1>w4-w6</h1>
-<h4><span>Solidworks2017使用10mm繪製</span></h4>
-<p></p>
-<p>製圖影片</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CgxD3W8lTf4" width="560"></iframe></p>
-<p><img alt="" height="347" src="./../images/擷取3.PNG" width="397"/></p>
-<p></p>
-<p><img alt="" height="303" src="./../images/擷取2.PNG" width="401"/></p>
-<p></p>
-<br />HW1 << <a href='HW1.html'>Previous</a> <a href='w7.html'>Next</a> >> w7</div>
+    <div id="tipue_search_content">w4-w6 << <a href='w4-w6.html'>Previous</a> <a href='Home.html'>Next</a> >> Home<br /><h1>w7</h1>
+<p>第一張</p>
+<p><img alt="" height="187" src="./../images/soildwork 練習一_201016_0.jpg" width="442"/></p>
+<p>第二張</p>
+<p><img alt="" height="175" src="./../images/soildwork 練習一_201016_1.jpg" width="439"/></p>
+<p>第三張</p>
+<p><img alt="" height="175" src="./../images/soildwork 練習一_201016_10.jpg" width="438"/></p>
+<p>第四張</p>
+<p><img alt="" height="184" src="./../images/soildwork 練習一_201016_11.jpg" width="435"/></p>
+<p>第五張</p>
+<p><img alt="" height="184" src="./../images/soildwork 練習一_201016_12.jpg" width="435"/></p>
+<p>第六張</p>
+<p><img alt="" height="182" src="./../images/soildwork 練習一_201016_13.jpg" width="433"/></p>
+<p>第七張</p>
+<p><img alt="" height="182" src="./../images/soildwork 練習一_201016_14.jpg" width="433"/></p>
+<p>第八張</p>
+<p><img alt="" height="182" src="./../images/soildwork 練習一_201016_15.jpg" width="434"/></p>
+<p>第九張</p>
+<p><img alt="" height="182" src="./../images/soildwork 練習一_201016_16.jpg" width="433"/></p>
+<p>第十張</p>
+<p><img alt="" height="183" src="./../images/soildwork 練習一_201016_17.jpg" width="433"/></p>
+<p>第十一張</p>
+<p><img alt="" height="183" src="./../images/soildwork 練習一_201016_18.jpg" width="433"/></p>
+<p>第十二張</p>
+<p><img alt="" height="173" src="./../images/soildwork 練習一_201016_19.jpg" width="434"/></p>
+<p>第十三張</p>
+<p><img alt="" height="183" src="./../images/soildwork 練習一_201016_2.jpg" width="433"/></p>
+<p>第十四張</p>
+<p><img alt="" height="183" src="./../images/soildwork 練習一_201016_20.jpg" width="434"/></p>
+<p>第十五張</p>
+<p><img alt="" height="174" src="./../images/soildwork 練習一_201016_21.jpg" width="435"/></p>
+<p>第十六張</p>
+<p><img alt="" height="185" src="./../images/soildwork 練習一_201016_3.jpg" width="438"/></p>
+<p>第十七張</p>
+<p><img alt="" height="184" src="./../images/soildwork 練習一_201016_4.jpg" width="436"/></p>
+<p>第十八張</p>
+<p><img alt="" height="182" src="./../images/soildwork 練習一_201016_5.jpg" width="435"/></p>
+<p>第十九張</p>
+<p><img alt="" height="184" src="./../images/soildwork 練習一_201016_6.jpg" width="436"/></p>
+<p>第二十張</p>
+<p><img alt="" height="183" src="./../images/soildwork 練習一_201016_7.jpg" width="437"/></p>
+<p>第二十一張</p>
+<p><img alt="" height="182" src="./../images/soildwork 練習一_201016_8.jpg" width="431"/></p>
+<p>第二十二張</p>
+<p><img alt="" height="181" src="./../images/soildwork 練習一_201016_9.jpg" width="429"/></p>
+<p>第二十三張</p>
+<p><img alt="" height="239" src="./../images/soildworks 2_201016_50.jpg" width="427"/></p>
+<br />w4-w6 << <a href='w4-w6.html'>Previous</a> <a href='Home.html'>Next</a> >> Home</div>
         
     <!-- footer -->
       <div class="container">
