--- a/config/content.htm
+++ b/config/content.htm
@@ -2,7 +2,6 @@
 <h5>我的倉儲:<a href="https://github.com/40832244">https://github.com/40832244</a><br/>課程網站:<a href="http://mde.tw/cad2020/content/index.html">http://mde.tw/cad2020/content/index.html</a></h5>
 <h1>組員名單</h1>
 <p><br/><a href="https://s40723224.github.io/cad2020">40723224</a><span> 范誠宇</span><br/><a href="https://40823204.github.io/cad2020">40823204</a><span> 賴惟嘉</span><br/><a href="https://40823212.github.io/cad2020">40823212</a><span> 陳逸翔</span><br/><a href="https://40823215.github.io/cad2020">40823215</a><span> 謝閎璾</span><br/><a href="https://40823219.github.io/cad2020">40823219</a><span> 廖顯紘</span><br/><a href="https://40823225.github.io/cad2020">40823225</a><span> 徐誠隆 </span><br/><a href="https://40823226.github.io/cad2020">40823226</a><span> 蘇柏瑋 </span><br/><a href="https://40823234.github.io/cad2020">40823234</a><span> 游子毅</span><br/><a href="https://40823250.github.io/cad2020">40823250</a><span> 張哲瑀</span><br/><a href="https://40823251.github.io/cad2020">40823251</a><span> 林進益</span><br/><a href="https://40832244.github.io/cad2020">40832244</a> 林晉廷</p>
-<h1>每周進度</h1>
 <h2>個人進度</h2>
 <h2>w1-w3</h2>
 <p></p>
@@ -111,5 +110,15 @@
 <p><img alt="" height="181" src="/images/soildwork 練習一_201016_9.jpg" width="429"/></p>
 <p>第二十三張</p>
 <p><img alt="" height="239" src="/images/soildworks 2_201016_50.jpg" width="427"/></p>
+<h1>小組作業</h1>
+<h2> 小組作業</h2>
+<p><span>零件圖檔下載:</span><a href="https://40823234.github.io/cad2020/images/1610096847175.jpg">bg1圖檔.zip</a></p>
+<p><span>繪製人員:40823204 賴惟嘉</span></p>
+<p><span><img alt="" height="396" src="/images/1610096847175.jpg" width="459"/></span></p>
+<h2>測試模擬</h2>
+<p><span>第一次測試模擬</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/sIqYp1pKi5g" width="560"></iframe></span></p>
+<p><span></span><span><br/></span></p>
+<p><span></span></p>
 <h1>Home</h1>
 <p></p>
