--- a/content/w7.html
+++ b/content/w7.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li><a href='w1-w3.html'>w1-w3</a><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a></li></ul><li><a href='w4-w6.html'>w4-w6</a><li><a href='w7.html'>w7</a></li></ul><li><a href='Home.html'>Home</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='組員名單.html'>組員名單</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li><a href='w1-w3.html'>w1-w3</a><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a></li></ul><li><a href='w4-w6.html'>w4-w6</a><li><a href='w7.html'>w7</a></li></ul><li class='has-children'><a href='小組作業-1.html'>小組作業-1</a><ul class='dropdown'><li><a href='小組作業-2.html'>小組作業-2</a><li><a href='測試模擬.html'>測試模擬</a></li></ul><li><a href='Home.html'>Home</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w4-w6 << <a href='w4-w6.html'>Previous</a> <a href='Home.html'>Next</a> >> Home<br /><h1>w7</h1>
+    <div id="tipue_search_content">w4-w6 << <a href='w4-w6.html'>Previous</a> <a href='小組作業-1.html'>Next</a> >> 小組作業-1<br /><h1>w7</h1>
 <p>第一張</p>
 <p><img alt="" height="187" src="./../images/soildwork 練習一_201016_0.jpg" width="442"/></p>
 <p>第二張</p>
@@ -180,7 +180,7 @@ img.add_border {
 <p><img alt="" height="181" src="./../images/soildwork 練習一_201016_9.jpg" width="429"/></p>
 <p>第二十三張</p>
 <p><img alt="" height="239" src="./../images/soildworks 2_201016_50.jpg" width="427"/></p>
-<br />w4-w6 << <a href='w4-w6.html'>Previous</a> <a href='Home.html'>Next</a> >> Home</div>
+<br />w4-w6 << <a href='w4-w6.html'>Previous</a> <a href='小組作業-1.html'>Next</a> >> 小組作業-1</div>
         
     <!-- footer -->
       <div class="container">
