--- a/content/小組作業-1.html
+++ b/content/小組作業-1.html
@@ -133,16 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW1 << <a href='HW1.html'>Previous</a> <a href='w7.html'>Next</a> >> w7<br /><h1>w4-w6</h1>
-<h4><span>Solidworks2017使用10mm繪製</span></h4>
-<p></p>
-<p>製圖影片</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CgxD3W8lTf4" width="560"></iframe></p>
-<p><img alt="" height="347" src="./../images/擷取3.PNG" width="397"/></p>
-<p></p>
-<p><img alt="" height="303" src="./../images/擷取2.PNG" width="401"/></p>
-<p></p>
-<br />HW1 << <a href='HW1.html'>Previous</a> <a href='w7.html'>Next</a> >> w7</div>
+    <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='小組作業-2.html'>Next</a> >> 小組作業-2<br /><h1>小組作業-1</h1>
+<br />w7 << <a href='w7.html'>Previous</a> <a href='小組作業-2.html'>Next</a> >> 小組作業-2</div>
         
     <!-- footer -->
       <div class="container">
