--- a/content/小組作業-2.html
+++ b/content/小組作業-2.html
@@ -133,16 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW1 << <a href='HW1.html'>Previous</a> <a href='w7.html'>Next</a> >> w7<br /><h1>w4-w6</h1>
-<h4><span>Solidworks2017使用10mm繪製</span></h4>
-<p></p>
-<p>製圖影片</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CgxD3W8lTf4" width="560"></iframe></p>
-<p><img alt="" height="347" src="./../images/擷取3.PNG" width="397"/></p>
-<p></p>
-<p><img alt="" height="303" src="./../images/擷取2.PNG" width="401"/></p>
-<p></p>
-<br />HW1 << <a href='HW1.html'>Previous</a> <a href='w7.html'>Next</a> >> w7</div>
+    <div id="tipue_search_content">小組作業-1 << <a href='小組作業-1.html'>Previous</a> <a href='測試模擬.html'>Next</a> >> 測試模擬<br /><h1>小組作業-2</h1>
+<p><span>零件圖檔下載:</span><a href="https://40823234.github.io/cad2020/images/1610096847175.jpg">bg1圖檔.zip</a></p>
+<p><span>繪製人員:40823204 賴惟嘉</span></p>
+<p><span><img alt="" height="396" src="./../images/1610096847175.jpg" width="459"/></span></p>
+<br />小組作業-1 << <a href='小組作業-1.html'>Previous</a> <a href='測試模擬.html'>Next</a> >> 測試模擬</div>
         
     <!-- footer -->
       <div class="container">
