--- a/content/組員名單.html
+++ b/content/組員名單.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li><a href='w1-w3.html'>w1-w3</a><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a></li></ul><li><a href='w4-w6.html'>w4-w6</a><li><a href='w7.html'>w7</a></li></ul><li><a href='Home.html'>Home</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='組員名單.html'>組員名單</a><ul class='dropdown'><li><a href='個人進度.html'>個人進度</a><li><a href='w1-w3.html'>w1-w3</a><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a></li></ul><li><a href='w4-w6.html'>w4-w6</a><li><a href='w7.html'>w7</a></li></ul><li class='has-children'><a href='小組作業-1.html'>小組作業-1</a><ul class='dropdown'><li><a href='小組作業-2.html'>小組作業-2</a><li><a href='測試模擬.html'>測試模擬</a></li></ul><li><a href='Home.html'>Home</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,9 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='每周進度.html'>Next</a> >> 每周進度<br /><h1>組員名單</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='個人進度.html'>Next</a> >> 個人進度<br /><h1>組員名單</h1>
 <p><br/><a href="https://s40723224.github.io/cad2020">40723224</a><span> 范誠宇</span><br/><a href="https://40823204.github.io/cad2020">40823204</a><span> 賴惟嘉</span><br/><a href="https://40823212.github.io/cad2020">40823212</a><span> 陳逸翔</span><br/><a href="https://40823215.github.io/cad2020">40823215</a><span> 謝閎璾</span><br/><a href="https://40823219.github.io/cad2020">40823219</a><span> 廖顯紘</span><br/><a href="https://40823225.github.io/cad2020">40823225</a><span> 徐誠隆 </span><br/><a href="https://40823226.github.io/cad2020">40823226</a><span> 蘇柏瑋 </span><br/><a href="https://40823234.github.io/cad2020">40823234</a><span> 游子毅</span><br/><a href="https://40823250.github.io/cad2020">40823250</a><span> 張哲瑀</span><br/><a href="https://40823251.github.io/cad2020">40823251</a><span> 林進益</span><br/><a href="https://40832244.github.io/cad2020">40832244</a> 林晉廷</p>
-<br />About << <a href='About.html'>Previous</a> <a href='每周進度.html'>Next</a> >> 每周進度</div>
+<br />About << <a href='About.html'>Previous</a> <a href='個人進度.html'>Next</a> >> 個人進度</div>
         
     <!-- footer -->
       <div class="container">
