--- a/config/content.htm
+++ b/config/content.htm
@@ -111,7 +111,15 @@
 <p>第二十三張</p>
 <p><img alt="" height="239" src="/images/soildworks 2_201016_50.jpg" width="427"/></p>
 <h2>w8-w17</h2>
-<p></p>
+<p><strong>2020/12/4小組討論(小組討論)</strong></p>
+<p><strong>目標:方案一.繪製行星模擬器  </strong></p>
+<p><strong>       方案二.在學長之模擬上建構與修改出新的主題</strong></p>
+<p><strong><img alt="" height="217" src="/images/001.png" width="453"/></strong></p>
+<p><strong><img alt="" height="215" src="/images/002.png" width="453"/></strong></p>
+<p><strong><img alt="" height="214" src="/images/003.png" width="451"/></strong></p>
+<h2><strong>W18</strong></h2>
+<p><strong>40832244心得:</strong></p>
+<p><b>感覺才剛轉進來這個班，馬上的一個學期就結束了。由於沒有學過大一的課程內容，所以使我開學過了很久才開始跟上同學的腳步。從一開始沒有網頁，沒有FALL2020等，到現在能有一個有內容的網站，史學了不少東西。雖然很多時候真得是靠同學完成的，大部分都看得不是很懂，但我有跟在旁邊憶起做，多少有學會了點新知識。到了下半學期的的課程是小組作業，我的貢獻不多，因為我前半學期的作業都還沒跟上。自己作業跟上進度之後才有比較大的付出在小組作業上。希望我在下學期的課程能學習得更快，更融入大家的學習。</b></p>
 <h1>小組討論</h1>
 <h2> 小組作業</h2>
 <p><span>零件圖檔下載:</span><a href="https://40823234.github.io/cad2020/images/1610096847175.jpg">bg1圖檔.zip</a></p>
