--- a/content/w8-w17.html
+++ b/content/w8-w17.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='個人進度.html'>個人進度</a><ul class='dropdown'><li><a href='w1-w3.html'>w1-w3</a><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a></li></ul><li><a href='w4-w6.html'>w4-w6</a><li><a href='w7.html'>w7</a><li><a href='w8-w17.html'>w8-w17</a></li></ul><li class='has-children'><a href='小組討論.html'>小組討論</a><ul class='dropdown'><li><a href='小組作業.html'>小組作業</a><li><a href='測試模擬.html'>測試模擬</a></li></ul><li><a href='Home.html'>Home</a></li>
+                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='個人進度.html'>個人進度</a><ul class='dropdown'><li><a href='w1-w3.html'>w1-w3</a><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a></li></ul><li><a href='w4-w6.html'>w4-w6</a><li><a href='w7.html'>w7</a><li><a href='w8-w17.html'>w8-w17</a><li><a href='W18.html'>W18</a></li></ul><li class='has-children'><a href='小組討論.html'>小組討論</a><ul class='dropdown'><li><a href='小組作業.html'>小組作業</a><li><a href='測試模擬.html'>測試模擬</a></li></ul><li><a href='Home.html'>Home</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,9 +133,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='小組討論.html'>Next</a> >> 小組討論<br /><h1>w8-w17</h1>
-<p></p>
-<br />w7 << <a href='w7.html'>Previous</a> <a href='小組討論.html'>Next</a> >> 小組討論</div>
+    <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='W18.html'>Next</a> >> W18<br /><h1>w8-w17</h1>
+<p><strong>2020/12/4小組討論(小組討論)</strong></p>
+<p><strong>目標:方案一.繪製行星模擬器  </strong></p>
+<p><strong>       方案二.在學長之模擬上建構與修改出新的主題</strong></p>
+<p><strong><img alt="" height="217" src="./../images/001.png" width="453"/></strong></p>
+<p><strong><img alt="" height="215" src="./../images/002.png" width="453"/></strong></p>
+<p><strong><img alt="" height="214" src="./../images/003.png" width="451"/></strong></p>
+<br />w7 << <a href='w7.html'>Previous</a> <a href='W18.html'>Next</a> >> W18</div>
         
     <!-- footer -->
       <div class="container">
