--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -111,7 +111,7 @@
 <p>第二十三張</p>
 <p><img alt="" height="239" src="/images/soildworks 2_201016_50.jpg" width="427"/></p>
 <h2>w8-w17</h2>
-<p><strong>2020/12/4小組討論</strong></p>
+<p><strong>2020/12/4小組討論(小組討論)</strong></p>
 <p><strong>目標:方案一.繪製行星模擬器  </strong></p>
 <p><strong>       方案二.在學長之模擬上建構與修改出新的主題</strong></p>
 <p><strong><img alt="" height="217" src="/images/001.png" width="453"/></strong></p>
