--- a/content/指令.html
+++ b/content/指令.html
@@ -133,10 +133,21 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w8-w17 << <a href='w8-w17.html'>Previous</a> <a href='小組討論.html'>Next</a> >> 小組討論<br /><h1>W18</h1>
-<p><strong>40832244心得:</strong></p>
-<p><b>感覺才剛轉進來這個班，馬上的一個學期就結束了。由於沒有學過大一的課程內容，所以使我開學過了很久才開始跟上同學的腳步。從一開始沒有網頁，沒有FALL2020等，到現在能有一個有內容的網站，史學了不少東西。雖然很多時候真得是靠同學完成的，大部分都看得不是很懂，但我有跟在旁邊憶起做，多少有學會了點新知識。到了下半學期的的課程是小組作業，我的貢獻不多，因為我前半學期的作業都還沒跟上。自己作業跟上進度之後才有比較大的付出在小組作業上。希望我在下學期的課程能學習得更快，更融入大家的學習。</b></p>
-<br />w8-w17 << <a href='w8-w17.html'>Previous</a> <a href='小組討論.html'>Next</a> >> 小組討論</div>
+    <div id="tipue_search_content">課程筆記 << <a href='課程筆記.html'>Previous</a> <a href='Home.html'>Next</a> >> Home<br /><h1>指令</h1>
+<p>得到9443網址:</p>
+<p>開啟fall2020<span>→開啟</span>start.bat</p>
+<p>cd tmp/cad2020/cmsimde(進入資料夾)</p>
+<p>python wsgi.py(使用python執行wsgi.py檔)</p>
+<p>→得到網址( https://127.0.0.1:9443/ )</p>
+<p>網站密碼:admin</p>
+<p></p>
+<p>upload9443網站</p>
+<p>開啟<span>start.bat</span></p>
+<p><span>cd tmp/cad2020(進入資料夾)</span></p>
+<p>git add。 <span>→ git commit -m"名稱" → git push → (輸入帳號密碼) → 完成上傳</span></p>
+<p><span></span></p>
+<p><span> </span></p>
+<br />課程筆記 << <a href='課程筆記.html'>Previous</a> <a href='Home.html'>Next</a> >> Home</div>
         
     <!-- footer -->
       <div class="container">
