--- a/content/下載內容.html
+++ b/content/下載內容.html
@@ -133,9 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='個人進度.html'>Next</a> >> 個人進度<br /><h1>組員名單</h1>
-<p><br/><a href="https://s40723224.github.io/cad2020">40723224</a><span> 范誠宇</span><br/><a href="https://40823204.github.io/cad2020">40823204</a><span> 賴惟嘉</span><br/><a href="https://40823212.github.io/cad2020">40823212</a><span> 陳逸翔</span><br/><a href="https://40823215.github.io/cad2020">40823215</a><span> 謝閎璾</span><br/><a href="https://40823219.github.io/cad2020">40823219</a><span> 廖顯紘</span><br/><a href="https://40823225.github.io/cad2020">40823225</a><span> 徐誠隆 </span><br/><a href="https://40823226.github.io/cad2020">40823226</a><span> 蘇柏瑋 </span><br/><a href="https://40823234.github.io/cad2020">40823234</a><span> 游子毅</span><br/><a href="https://40823250.github.io/cad2020">40823250</a><span> 張哲瑀</span><br/><a href="https://40823251.github.io/cad2020">40823251</a><span> 林進益</span><br/><a href="https://40832244.github.io/cad2020">40832244</a> 林晉廷</p>
-<br />About << <a href='About.html'>Previous</a> <a href='個人進度.html'>Next</a> >> 個人進度</div>
+    <div id="tipue_search_content">課程筆記 << <a href='課程筆記.html'>Previous</a> <a href='指令.html'>Next</a> >> 指令<br /><h1>下載內容</h1>
+<p><a href="https://drive.google.com/file/d/1fKXXLc2P7hQb3spsmD1HM9Uljy3gvcMc/view">下載fall2020</a></p>
+<p><a href="https://drive.google.com/drive/folders/1LO3o1OpR0KF4SxDScOSa9EQNa_kGsFzs">課程影片連結</a></p>
+<p><a href="https://git-scm.com/download/win">下載portable git </a> <span> </span><span>→   點選<strong><a href="https://github.com/git-for-windows/git/releases/download/v2.30.0.windows.2/PortableGit-2.30.0.2-64-bit.7z.exe">64-bit Git for Windows Portable</a>. </strong></span></p>
+<br />課程筆記 << <a href='課程筆記.html'>Previous</a> <a href='指令.html'>Next</a> >> 指令</div>
         
     <!-- footer -->
       <div class="container">
