--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -130,5 +130,23 @@
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/sIqYp1pKi5g" width="560"></iframe></span></p>
 <p><span></span><span><br/></span></p>
 <p><span></span></p>
+<h1>課程筆記</h1>
+<p><a href="https://drive.google.com/file/d/1fKXXLc2P7hQb3spsmD1HM9Uljy3gvcMc/view">下載fall2020</a></p>
+<p><a href="https://drive.google.com/drive/folders/1LO3o1OpR0KF4SxDScOSa9EQNa_kGsFzs">課程影片連結</a></p>
+<p><a href="https://git-scm.com/download/win">下載portable git </a> <span> </span><span>→   點選<strong><a href="https://github.com/git-for-windows/git/releases/download/v2.30.0.windows.2/PortableGit-2.30.0.2-64-bit.7z.exe">64-bit Git for Windows Portable</a>. </strong></span></p>
+<h2>指令</h2>
+<p>得到9443網址:</p>
+<p>開啟fall2020<span>→開啟</span>start.bat</p>
+<p>cd tmp/cad2020/cmsimde(進入資料夾)</p>
+<p>python wsgi.py(使用python執行wsgi.py檔)</p>
+<p>→得到網址( https://127.0.0.1:9443/ )</p>
+<p>網站密碼:admin</p>
+<p></p>
+<p>upload9443網站</p>
+<p>開啟<span>start.bat</span></p>
+<p><span>cd tmp/cad2020(進入資料夾)</span></p>
+<p>git add。 <span>→ git commit -m"名稱" → git push → (輸入帳號密碼) → 完成上傳</span></p>
+<p><span></span></p>
+<p><span> </span></p>
 <h1>Home</h1>
 <p></p>
