--- a/content/課程筆記.html
+++ b/content/課程筆記.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='個人進度.html'>個人進度</a><ul class='dropdown'><li><a href='w1-w3.html'>w1-w3</a><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a></li></ul><li><a href='w4-w6.html'>w4-w6</a><li><a href='w7.html'>w7</a><li><a href='w8-w17.html'>w8-w17</a><li><a href='W18.html'>W18</a></li></ul><li class='has-children'><a href='小組討論.html'>小組討論</a><ul class='dropdown'><li><a href='小組作業.html'>小組作業</a><li><a href='測試模擬.html'>測試模擬</a></li></ul><li class='has-children'><a href='課程筆記.html'>課程筆記</a><ul class='dropdown'><li><a href='指令.html'>指令</a></li></ul><li><a href='Home.html'>Home</a></li>
+                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='個人進度.html'>個人進度</a><ul class='dropdown'><li><a href='w1-w3.html'>w1-w3</a><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a></li></ul><li><a href='w4-w6.html'>w4-w6</a><li><a href='w7.html'>w7</a><li><a href='w8-w17.html'>w8-w17</a><li><a href='W18.html'>W18</a></li></ul><li class='has-children'><a href='小組討論.html'>小組討論</a><ul class='dropdown'><li><a href='小組作業.html'>小組作業</a><li><a href='測試模擬.html'>測試模擬</a></li></ul><li class='has-children'><a href='課程筆記.html'>課程筆記</a><ul class='dropdown'><li><a href='下載內容.html'>下載內容</a><li><a href='指令.html'>指令</a><li><a href='遇到問題.html'>遇到問題</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,11 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">測試模擬 << <a href='測試模擬.html'>Previous</a> <a href='指令.html'>Next</a> >> 指令<br /><h1>課程筆記</h1>
-<p><a href="https://drive.google.com/file/d/1fKXXLc2P7hQb3spsmD1HM9Uljy3gvcMc/view">下載fall2020</a></p>
-<p><a href="https://drive.google.com/drive/folders/1LO3o1OpR0KF4SxDScOSa9EQNa_kGsFzs">課程影片連結</a></p>
-<p><a href="https://git-scm.com/download/win">下載portable git </a> <span> </span><span>→   點選<strong><a href="https://github.com/git-for-windows/git/releases/download/v2.30.0.windows.2/PortableGit-2.30.0.2-64-bit.7z.exe">64-bit Git for Windows Portable</a>. </strong></span></p>
-<br />測試模擬 << <a href='測試模擬.html'>Previous</a> <a href='指令.html'>Next</a> >> 指令</div>
+    <div id="tipue_search_content">測試模擬 << <a href='測試模擬.html'>Previous</a> <a href='下載內容.html'>Next</a> >> 下載內容<br /><h1>課程筆記</h1>
+<br />測試模擬 << <a href='測試模擬.html'>Previous</a> <a href='下載內容.html'>Next</a> >> 下載內容</div>
         
     <!-- footer -->
       <div class="container">
