--- a/content/遇到問題.html
+++ b/content/遇到問題.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='個人進度.html'>個人進度</a><ul class='dropdown'><li><a href='w1-w3.html'>w1-w3</a><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a></li></ul><li><a href='w4-w6.html'>w4-w6</a><li><a href='w7.html'>w7</a><li><a href='w8-w17.html'>w8-w17</a><li><a href='W18.html'>W18</a></li></ul><li class='has-children'><a href='小組討論.html'>小組討論</a><ul class='dropdown'><li><a href='小組作業.html'>小組作業</a><li><a href='測試模擬.html'>測試模擬</a></li></ul><li class='has-children'><a href='課程筆記.html'>課程筆記</a><ul class='dropdown'><li><a href='指令.html'>指令</a></li></ul><li><a href='Home.html'>Home</a></li>
+                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='個人進度.html'>個人進度</a><ul class='dropdown'><li><a href='w1-w3.html'>w1-w3</a><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a></li></ul><li><a href='w4-w6.html'>w4-w6</a><li><a href='w7.html'>w7</a><li><a href='w8-w17.html'>w8-w17</a><li><a href='W18.html'>W18</a></li></ul><li class='has-children'><a href='小組討論.html'>小組討論</a><ul class='dropdown'><li><a href='小組作業.html'>小組作業</a><li><a href='測試模擬.html'>測試模擬</a></li></ul><li class='has-children'><a href='課程筆記.html'>課程筆記</a><ul class='dropdown'><li><a href='下載內容.html'>下載內容</a><li><a href='指令.html'>指令</a><li><a href='遇到問題.html'>遇到問題</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,17 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">指令 << <a href='指令.html'>Previous</a> <br /><h1>Home</h1>
+    <div id="tipue_search_content">指令 << <a href='指令.html'>Previous</a> <br /><h1>遇到問題</h1>
+<p>換電腦後無法執行指令</p>
+<p>解決辦法:從新pip install <span>→  載起始檔  pip install flask flask_cors lxml bs4 markdown pelican leo <span>→ 改 star路徑  <span>→<span> 到黑窗執行 git push -F  <span>→<span> 改.git 裡面的cinfig的學號改成正確的  <span>→<span>  完成!</span></span></span></span></span></span></span></span></p>
+<p><span><span> <span> </span></span><span>  </span></span></p>
+<p></p>
+<p>upload9443網站</p>
+<p>開啟<span>start.bat</span></p>
+<p><span>cd tmp/cad2020(進入資料夾)</span></p>
+<p>git add。 <span>→ git commit -m"名稱" → git push → (輸入帳號密碼) → 完成上傳</span></p>
+<p><span></span></p>
+<p><span> </span></p>
 <p></p><br />指令 << <a href='指令.html'>Previous</a> </div>
         
     <!-- footer -->
