--- a/content/index.html
+++ b/content/index.html
@@ -135,6 +135,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='組員名單.html'>Next</a> >> 組員名單<br /><h1>About</h1>
 <h5>我的倉儲:<a href="https://github.com/40832244">https://github.com/40832244</a><br/>課程網站:<a href="http://mde.tw/cad2020/content/index.html">http://mde.tw/cad2020/content/index.html</a></h5>
+<p>小組網站:<a href="http://40823251.github.io/cad2020bg1">http://40823251.github.io/cad2020bg1</a></p>
 <br /> <a href='組員名單.html'>Next</a> >> 組員名單</div>
         
     <!-- footer -->
